<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/customer_top"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/Purple_SafeMobile">

        <ImageView
            android:id="@+id/customer_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/menu" />

        <ImageView
            android:id="@+id/customer_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="שירות לקוחות"
            android:textColor="@color/White"
            android:textSize="27dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/h2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/customer_top"
        android:background="@color/Yellow_SafeMobile"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/faq_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/faq" />

        <TextView
            android:id="@+id/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:layout_toLeftOf="@+id/faq_img"
            android:text="שאלות נפוצות"
            android:textColor="@color/Purpule_Dark_SafeMobile"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/h1"
            android:layout_toLeftOf="@+id/faq_img"
            android:text="לנוחיותך ריכזנו את השאלות הנפוצות ביותר"
            android:textColor="@color/Purpule_Dark_SafeMobile"
            android:textSize="15dp" />

    </RelativeLayout>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/h2"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/q_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/White"
                    android:onClick="ShowAnswer()"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:text="@string/question1"
                        android:textColor="@color/Purpule_Dark_SafeMobile"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/a_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/answer1"
                        android:textColor="@color/Purple_SafeMobile"
                        android:textSize="15dp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/q_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/White"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:text="@string/question2"
                        android:textColor="@color/Purpule_Dark_SafeMobile"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/a_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/answer2"
                        android:textColor="@color/Purple_SafeMobile"
                        android:textSize="15dp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/q_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/White"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:text="@string/question3"
                        android:textColor="@color/Purpule_Dark_SafeMobile"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/a_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/answer3"
                        android:textColor="@color/Purple_SafeMobile"
                        android:textSize="15dp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/q_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/White"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:text="@string/question4"
                        android:textColor="@color/Purpule_Dark_SafeMobile"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/a_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/answer4"
                        android:textColor="@color/Purple_SafeMobile"
                        android:textSize="15dp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/q_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/White"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:text="@string/question5"
                        android:textColor="@color/Purpule_Dark_SafeMobile"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/a_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/answer5"
                        android:textColor="@color/Purple_SafeMobile"
                        android:textSize="15dp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/q_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/White"
                    android:onClick="ShowAnswer()"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:text="@string/question6"
                        android:textColor="@color/Purpule_Dark_SafeMobile"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/a_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/answer6"
                        android:textColor="@color/Purple_SafeMobile"
                        android:textSize="15dp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/q_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/White"
                    android:onClick="ShowAnswer()"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:text="@string/question7"
                        android:textColor="@color/Purpule_Dark_SafeMobile"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/a_7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/answer7"
                        android:textColor="@color/Purple_SafeMobile"
                        android:textSize="15dp"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/q_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/White"
                    android:onClick="ShowAnswer()"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:text="@string/question8"
                        android:textColor="@color/Purpule_Dark_SafeMobile"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/a_8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="15dp"
                        android:paddingTop="15dp"
                        android:text="@string/answer8"
                        android:textColor="@color/Purple_SafeMobile"
                        android:textSize="15dp"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/open_form"
                android:layout_width="380dp"
                android:layout_height="110dp"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/faq"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/round_button"
                android:orientation="horizontal"


                >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_vertical"
                    android:layout_toRightOf="@+id/txt"
                    android:layout_weight="1"
                    android:src="@drawable/survey" />

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:text="פתיחת קריאת שירות"
                    android:textColor="@color/Purpule_Dark_SafeMobile"
                    android:textSize="23dp" />


            </LinearLayout>
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>